2008-07-24	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/bootcard.h: New file.

	* bootcard.c: Changed bsp_get_workarea() to bsp_get_work_area() and
	added support for an optional separate heap area.

	* bsppretaskinghook.c: Cleanup.  Include bootcard.h.

	* include/irq-generic.h, src/irq-generic.c, src/irq-legacy.c: Support
	for new rtems_interrupt_handler_iterate() function.

2008-07-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bootcard.c: Must include bsp.h or bspopts.h or we cannot know if
	boot_card() handles RAM allocation.

2008-07-14	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* bootcard.c: Removed duplicated code.

2008-07-10	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* bootcard.c: Special case for PowerPC: The interrupt disable
	mask is stored in SPRG0.  It must be valid before we can use
	rtems_interrupt_disable().

2008-07-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/irq-config.h, include/irq-generic.h,
	src/irq-generic.c, src/irq-legacy.c: Generic BSP interrupt handler
	support.

2008-06-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/tm27.h: New file. Stub version of tm27 support.

2008-05-23	Till Straumann <strauman@slac.stanford.edu>

	* vmeUniverse/VME.h: removed 'weak' attribute from
	declaration of BSP_vme_config().

2008-05-22	Till Straumann <strauman@slac.stanford.edu>

	* vmeUniverse/vmeUniverse.c: fixed compiler warning;
	moved struct attributes as directed by gcc warning.

2008-05-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* bootcard.c: Add capability for bootcard.c BSP Initialization
	Framework to ask the BSP where it has memory for the RTEMS Workspace
	and C Program Heap. These collectively are referred to as work area.
	If the BSP supports this, then it does not have to include code to
	split the available memory between the two areas. This reduces the
	amount of code in the BSP specific bspstart.c file. Additionally, the